# design-system-extractor

./: .env.example  .gitignore  AGENTS.md  FIX7-PUNCHLIST.md  HANDOFF-2026-07-02.md  HOW-IT-WORKS.md  README.md  SYSTEM-SCHEMA.md  changes.md  config-anthropic.yaml  config.default.yaml  generate_grounding_sync_audit.py  pyproject.toml  run_additive_design_system.py  run_brand_extraction.py  run_brand_pipeline.py  run_image_pipeline.py  run_live_source_pipeline.py  run_pipeline.py  run_pipeline_flow.py  run_section_grounding.py  start-studio.sh  studio_server.py  surface-component-map-strategy.md  v177-roma-pipeline-walkthrough.html  viewer-additive.html  viewer-visual.html  viewer.html  website-gen-framework-prompt.md
.claude/: settings.json
brand_pipeline/: COMPOSITION-DESIGN.md  archetype_library.py  artifact_digest.py  author_brand.py  band_repair.py  component_render.py  compose_from_composition.py  compose_page.py  compose_replica.py  compose_section.py  composition_lint.py  consolidate.py  contract_projection.py  conversion_audit.py  conversion_structure.py  css_fidelity.py  designed_components.py  export_kit.py  generate_composition.py  generate_inventory.py  harvest_patterns.py  interaction_audit.py  inventory.md  layout_library.py  measured_geometry.py  media_semantics.py  onbrand_check.py  pipeline_flow.py  readability.py  relume_recipe_catalog.py  relume_responsive_parser.py  render_brand_md.py  render_catalog.py  render_components_preview.py  render_composition.py  render_hero_variants.py  render_section.py  replica_repair.py  responsive_facts.py  (+19 more)
(+1294 files in other folders)
